tests/parsing/smtlib/v2.6/errors/087_echo_unclosed_1.smt2
(set-logic ALL)
(echo "foobar" _)
