tests/parsing/smtlib/v2.6/errors/087_echo_unclosed_1.expected
File "", line 1, character 31-32:
Error Syntax error (state 158) while reading the reserved word '_'.

